# dodoPayments-TransactionService

./: API.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  env.example  prometheus.yml
migrations/: 001_initial_schema.sql
src/: config.rs  database.rs  error.rs  main.rs  metrics.rs  models.rs  webhooks.rs
src/api/: accounts.rs  auth.rs  health.rs  metrics.rs  mod.rs  transactions.rs  webhooks.rs
src/services/: account.rs  mod.rs  transaction.rs  webhook.rs
