[package]
name = "transaction-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-cron-scheduler = "0.8"

sha2 = "0.10"

thiserror = "1.0"

dotenvy = "0.15"