[package]
name = "transaction-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }

anyhow = "1.0"
thiserror = "1.0"

sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

governor = "0.5"
nonzero_ext = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-jaeger = "0.20"
opentelemetry-prometheus = "0.12"
tracing-opentelemetry = "0.23"

validator = { version = "0.16", features = ["derive"] }

tokio-cron-scheduler = "0.8"

dotenvy = "0.15"